--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -108,7 +108,6 @@ justify-content: space-between;}
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
-	z-index: 999;
   }
   
   .dot {
@@ -232,10 +231,11 @@ justify-content: space-between;}
     border-radius: 15px;
     padding: 10px 20px;
     margin-bottom: 15px;
+	margin-left: 2%;
+	margin-right: 2%;
     background-color: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 88%;
     height: 69px;
     opacity: 0;
     transform: translateY(20px);
@@ -293,7 +293,7 @@ justify-content: space-between;}
 .button {
 	font-family: 'roboto';
 	display: flex;
-	width: 50%;
+	width: 33%;
 	height: 50px;
 	background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
 	border-radius: 25px;
@@ -302,7 +302,7 @@ justify-content: space-between;}
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
-	margin-left: 25%;
+	margin-left: 31%;
 }
 
 .marge1 {
@@ -395,6 +395,11 @@ footer a {
 	border-radius: 25px 25px 0px 0px;
 }
 
+.food-item {
+	margin-left: 2%;
+	margin-right: 2%;
+}
+
 .flex {
 display: flex;
 justify-content: center;
@@ -409,8 +414,8 @@ justify-content: center;
 }
 
 .button {
-	width: 15%;
-	margin-left: 40%;
+	width: 25%;
+	margin-left: 37%;
 	margin-bottom: 40px;
 }
 
@@ -439,11 +444,6 @@ justify-content: center;
     -webkit-text-fill-color: transparent;
 }
 
-.food-item {
-    width: 95%;
-    height: 90px;
-}
-
 
 /* Footer */
 
@@ -462,8 +462,8 @@ justify-content: center;
 	margin-top: -40px;
 }
 
-footer {
-	height: 114px;
+.footer a {
+	cursor: pointer;
 }
 
 .footer1 {
