--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -460,6 +460,7 @@ justify-content: center;
 	direction: rtl;
 	justify-content: space-around;
 	margin-top: -40px;
+	height: 114px;
 }
 
 .footer a {
