--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
 	align-items: center;
 	padding-right: 3px;
 	color: #353535;
+	margin-right: 10px;
 }
 
 .bloc-city {
@@ -42,6 +43,7 @@
 	align-items: center;
 	height: 50px;
 	background: #EAEAEA;
+    padding-left: 5%;
 }
 
 
@@ -89,6 +91,11 @@ nav {
 	z-index: 0;
 }
 
+.button:hover {
+background-color: #F7F7F7;
+box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
 header a {
 	color: white;
 	cursor: pointer;
@@ -116,14 +123,19 @@ section a {
 }
 
 
-.button-funct:hover .icon-flex  {
+.button-funct:hover .icon-flex1  {
 	color: rgba(147, 86, 220, 1);
 }
+
+.icon-flex1 {
+    margin-right: 10px;
+    color: rgba(126, 126, 126, 1);
+}
+
 
 .icon-flex {
     margin-right: 20px;
     color: rgba(126, 126, 126, 1);
-	z-index: 1;
 }
 
 .number {
@@ -419,13 +431,12 @@ footer a {
 
 /* DESKTOP + TABLETTE */
 
-@media (min-width: 768px)
-{
+@media (min-width: 768px) {
+
 .bloc-logo {
 	justify-content: center;
 	height: 96px;
 }	
-
 
 .reserve {
 	width: auto;
@@ -496,13 +507,11 @@ footer a {
 
 .logo-footer {
 	margin-top: 12px;
-	margin-left: ;
+	margin-right: -6%;
 }
 
 .footer a {
 	cursor: pointer;
-	padding-left:9% ;
-	padding-top: 7%;
 }
 
 .footer1 {
@@ -518,9 +527,8 @@ footer a {
 .footer3 {
 	order: 2;
 	cursor: pointer;
-	margin-right: -30%;
 }
 
 .footer4 {
 	order: 1;
-}
+} }
