--- a/css/style.css
+++ b/css/style.css
@@ -519,25 +519,32 @@ footer a {
 .footer-propose {
 	cursor: pointer;
 	padding-left: 20px;
+	z-index: 1;
+
 } 
 
 .footer-devenir {
 	cursor: pointer;
+	z-index: 1;
+
 }
 
 .footer-mention {
 	cursor: pointer;
 	padding-left: 20px;
+	z-index: 1;
+
 }
 
 .footer-contact {
 	cursor: pointer;
 	padding-left: 50px;
+	z-index: 1;
 }
 
 .groupe1 {
 	display:flex;
-	justify-content: space-between;
+
 }
 
 .groupe2 {
