--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -58,6 +58,7 @@ justify-content: space-between;}
 	position: relative;
 	top: -20px;
 	z-index: 1;
+	height: 1267px;
 }
 
 .fa-xl1 {
@@ -95,16 +96,14 @@ justify-content: space-between;}
 	justify-content: center;
 	align-items: center;
   }
-
-  
   
   .overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 1950px;
-	width: 100%;
+	height: 2000px;
+	width: 110%;
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
@@ -292,19 +291,26 @@ justify-content: space-between;}
 }
   
 .button {
+	position: relative;
 	font-family: 'roboto';
 	display: flex;
 	width: 33%;
 	height: 50px;
 	background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
 	border-radius: 25px;
-	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 	color: white;
 	justify-content: center;
 	align-items: center;
-	cursor: pointer;
-	margin-left: 31%;
+	margin-left: 31%; 
+	margin-top: 70px;
+	z-index: 1;
 }
+
+.button:hover {
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+	cursor: pointer;
+}
+
 
 .marge1 {
 font-weight: bold;
@@ -430,7 +436,10 @@ justify-content: center;
 	width: 25%;
 	margin-left: 37%;
 	margin-bottom: 40px;
+	cursor: pointer;
 }
+
+
 
 /* COEUR RESPONSIVE */
 
