--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -107,15 +107,18 @@ justify-content: space-between;}
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
-	z-index: 999;
+	z-index: 2;
   }
   
   .dot {
-	height: 50px;
-	width: 50px;
+	top: 200px;
+	position: relative;
+	height: 20px;
+	width: 20px;
 	border-radius: 50%;
 	margin: 0 15px;
 	animation: loader infinite 0.3s alternate;
+	z-index: 999;
   }
   
   .d1 {
@@ -487,7 +490,7 @@ justify-content: center;
 	display: flex;
 	justify-content: space-between;
 	margin-top: 15px;
-	padding-right: 30px;
+	padding-right: 45px;
 	padding-left: 30px;
 }
 
