--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -111,7 +111,7 @@ justify-content: space-between;}
   }
   
   .dot {
-	top: 200px;
+	top: 16%;
 	position: relative;
 	height: 20px;
 	width: 20px;
