--- a/css/style.css
+++ b/css/style.css
@@ -301,13 +301,12 @@ footer a {
 
   .loader-wrapper {
 	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	top: 50%;
+	left: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 4;
   }
   
   .overlay {
@@ -320,18 +319,18 @@ footer a {
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
-	z-index: 2;
+	z-index: 3;
   }
   
   .dot {
 	top: 16%;
 	position: relative;
-	height: 20px;
-	width: 20px;
+	height: 50px;
+	width: 50px;
 	border-radius: 50%;
 	margin: 0 15px;
 	animation: loader infinite 0.3s alternate;
-	z-index: 999;
+	z-index: 3;
   }
   
   .d1 {
