--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -82,19 +82,16 @@ justify-content: space-between;}
 	justify-content: center;
 	align-items: center;
 	animation: hideLoader 2.5s forwards;
-	margin-left: -20%;
-	margin-left: 1%;
   }
 
   .loader-wrapper {
 	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	top: 50%;
+	left: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 4;
   }
   
   .overlay {
@@ -102,23 +99,23 @@ justify-content: space-between;}
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 2000px;
+	height: 1950px;
 	width: 110%;
 	bottom: 0;
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
-	z-index: 2;
+	z-index: 3;
   }
   
   .dot {
 	top: 16%;
 	position: relative;
-	height: 20px;
-	width: 20px;
+	height: 50px;
+	width: 50px;
 	border-radius: 50%;
 	margin: 0 15px;
 	animation: loader infinite 0.3s alternate;
-	z-index: 999;
+	z-index: 3;
   }
   
   .d1 {
@@ -306,7 +303,6 @@ justify-content: space-between;}
 	align-items: center;
 	margin-left: 31%; 
 	margin-top: 70px;
-	z-index: 1;
 }
 
 .button:hover {
