ajout de l'ellipsis au texte du menu

--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -319,7 +319,9 @@ overflow: hidden;
 }
 
 .marge2 {
-	text-overflow: ellipsis;
+text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
 
 }
 
