--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@
 	align-items: center;
 	height: 50px;
 	background: #EAEAEA;
-    padding-left: 50px;
+	padding-left: 50px;
 }
 
 a {
@@ -91,8 +91,8 @@ nav {
 }
 
 .button:hover {
-background-color: #F7F7F7;
-box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
+	background-color: #F7F7F7;
+	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 header a {
@@ -122,37 +122,37 @@ section a {
 }
 
 
-.button-funct:hover .icon-flex1  {
+.button-funct:hover .icon-flex1 {
 	color: rgba(147, 86, 220, 1);
 }
 
 .icon-flex1 {
-    margin-right: 10px;
-    color: rgba(126, 126, 126, 1);
+	margin-right: 10px;
+	color: rgba(126, 126, 126, 1);
 }
 
 
 .icon-flex {
-    margin-right: 20px;
-    color: rgba(126, 126, 126, 1);
+	margin-right: 20px;
+	color: rgba(126, 126, 126, 1);
 }
 
 .number {
-    width: 24px;
-    height: 24px;
-    background: rgba(147, 86, 220, 1);
-    color: white;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	background: rgba(147, 86, 220, 1);
+	color: white;
+	font-size: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
 }
 
 .number-container {
-    position: relative;
-    left: -22px;
-    margin-right: -12px;
+	position: relative;
+	left: -22px;
+	margin-right: -12px;
 }
 
 .flex {
@@ -191,17 +191,17 @@ section a {
 	padding-left: 12px;
 	transition: background-color 0.3s ease, box-shadow 0.3s ease;
 	cursor: pointer;
-  }
+}
 
-  .button-funct p {
+.button-funct p {
 	font-weight: 500;
 }
-  
-  .button-funct:hover {
+
+.button-funct:hover {
 	background-color: #F7F7F7;
 	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
-  }
+}
 
 .restaurants {
 	display: flex;
@@ -225,7 +225,7 @@ section a {
 .restau-card:hover {
 	background-color: #F7F7F7;
 	box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.2);
-  }
+}
 
 .size-img {
 	object-fit: cover;
@@ -252,7 +252,7 @@ section a {
 }
 
 .heart-index {
-margin-right: 25px;
+	margin-right: 25px;
 }
 
 
@@ -297,9 +297,9 @@ footer a {
 	justify-content: center;
 	align-items: center;
 	animation: hideLoader 2.5s forwards;
-  }
+}
 
-  .loader-wrapper {
+.loader-wrapper {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -307,9 +307,9 @@ footer a {
 	justify-content: center;
 	align-items: center;
 	z-index: 4;
-  }
-  
-  .overlay {
+}
+
+.overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -320,9 +320,9 @@ footer a {
 	background-color: rgba(233, 233, 233, 0.8);
 	animation: hideLoader 2.5s forwards;
 	z-index: 3;
-  }
-  
-  .dot {
+}
+
+.dot {
 	top: 16%;
 	position: relative;
 	height: 50px;
@@ -331,117 +331,110 @@ footer a {
 	margin: 0 15px;
 	animation: loader infinite 0.3s alternate;
 	z-index: 3;
-  }
-  
-  .d1 {
+}
+
+.d1 {
 	background-color: #9356DC;
-  }
-  
-  .d2 {
+}
+
+.d2 {
 	background-color: #FF79DA;
 	animation-delay: 0.05s;
-  }
-  
-  .d3 {
+}
+
+.d3 {
 	background-color: #99E2D0;
 	animation-delay: 0.1s;
-  }
-  
-  @keyframes loader {
-	100% {
-	  transform: translateY(-30px);
-	}
-  }
-  
-  @keyframes hideLoader {
-	0%, 90% {
-	  opacity: 1;
-	  visibility: visible;
-	}
-	100% {
-	  opacity: 0;
-	  visibility: hidden;
-	}
-  }
-
-  /* COEUR */
-
-  .heart-btn:hover::after {
-    transform: scaleY(0);
 }
+
+@keyframes loader {
+	100% {
+		transform: translateY(-30px);
+	}
+}
+
+@keyframes hideLoader {
+
+	0%,
+	90% {
+		opacity: 1;
+		visibility: visible;
+	}
+
+	100% {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+/* COEUR */
+
+.heart-btn:hover::after {
+	transform: scaleY(0);
+}
+
 .heart-btn:hover .heart-btn__empty {
-    opacity: 0;
+	opacity: 0;
 }
+
 .heart-btn:hover .heart-btn__filled {
-    transform: scale(1);
+	transform: scale(1);
 }
+
 .heart-btn--accent {
-    cursor: pointer;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    bottom: 30px;
-    right: 24px;
+	cursor: pointer;
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	bottom: 30px;
+	right: 24px;
 }
 
 .heart-btn {
-    font-size: 1.5em;
+	font-size: 1.5em;
 }
+
 .heart-btn--accent::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 24px;
-    height: 24px;
-    opacity: 1;
-    z-index: 1;
-    transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
-    transform-origin: top;
-    background: #f6f6f6;
-    background: white;
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 24px;
+	height: 24px;
+	opacity: 1;
+	z-index: 1;
+	transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
+	transform-origin: top;
+	background: #f6f6f6;
+	background: white;
 }
+
 .heart-btn--accent {
-    width: 24px;
-    height: 24px;
-    bottom: 30px;
-    right: 24px;
+	width: 24px;
+	height: 24px;
+	bottom: 30px;
+	right: 24px;
 }
+
 .heart-btn__empty {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-weight: 100;
-    z-index: 2;
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-weight: 100;
+	z-index: 2;
 }
+
 .heart-btn__filled {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -452,121 +445,122 @@ footer a {
 
 @media (min-width: 768px) {
 
-.bloc-logo {
-	justify-content: center;
-	height: 96px;
-}	
+	.bloc-logo {
+		justify-content: center;
+		height: 96px;
+	}
 
-.reserve {
-	width: auto;
-	height: auto;
+	.reserve {
+		width: auto;
+		height: auto;
+	}
+
+	.discover {
+		width: auto;
+		height: auto;
+	}
+
+	.button-funct {
+		width: 30%;
+		margin-bottom: 4%;
+	}
+
+	.fonctionnement {
+		margin: auto;
+		width: 90%;
+	}
+
+	.button-desktop {
+		display: flex;
+		justify-content: space-between;
+		cursor: pointer;
+
+	}
+
+	.restau-card {
+		width: 40%;
+	}
+
+	.card-desktop {
+		display: flex;
+		margin-bottom: 40px;
+		margin-left: 1%;
+	}
+
+	.button-mobile {
+		display: flex;
+	}
+
+	.title {
+		margin-top: 4%;
+		margin-left: 0%;
+	}
+
+	.title2 {
+		margin-left: 6%;
+	}
+
+	/* Footer */
+
+	.reverse {
+		direction: rtl;
+	}
+
+	.flex-desktop {
+		display: flex;
+		direction: rtl;
+		height: 114px;
+	}
+
+	.footer {
+		height: 114px;
+	}
+
+	.logo-footer {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 15px;
+		padding-right: 45px;
+		padding-left: 30px;
+	}
+
+	.footer a {
+		cursor: pointer;
+	}
+
+	.footer-propose {
+		cursor: pointer;
+		padding-left: 20px;
+		z-index: 1;
+
+	}
+
+	.footer-devenir {
+		cursor: pointer;
+		z-index: 1;
+
+	}
+
+	.footer-mention {
+		cursor: pointer;
+		padding-left: 20px;
+		z-index: 1;
+
+	}
+
+	.footer-contact {
+		cursor: pointer;
+		padding-left: 50px;
+		z-index: 1;
+	}
+
+	.groupe1 {
+		display: flex;
+
+	}
+
+	.groupe2 {
+		display: flex;
+	}
+
 }
-
-.discover {
-	width: auto;
-	height: auto;
-}
-
-.button-funct {
-	width: 30%;
-	margin-bottom: 4%;
-}
-
-.fonctionnement {
-	margin: auto;
-	width: 90%;
-}
-
-.button-desktop {
-	display: flex;
-	justify-content: space-between;
-	cursor: pointer;
-
-}
-.restau-card {
-	width: 40%;
-}
-
-.card-desktop {
-	display: flex;
-	margin-bottom: 40px;
-	margin-left: 1%;
-}
-
-.button-mobile {
-	display: flex;
-}
-
-.title {
-	margin-top: 4%;
-	margin-left: 0%;
-}
-
-.title2 {
-	margin-left: 6%;
-}
-
-/* Footer */
-
-.reverse {
-	direction: rtl;
-}
-
-.flex-desktop {
-	display: flex;
-	direction: rtl;
-	height: 114px;
-}
-
-.footer {
-	height: 114px;
-}
-
-.logo-footer {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 15px;
-	padding-right: 45px;
-	padding-left: 30px;
-}
-
-.footer a {
-	cursor: pointer;
-}
-
-.footer-propose {
-	cursor: pointer;
-	padding-left: 20px;
-	z-index: 1;
-
-} 
-
-.footer-devenir {
-	cursor: pointer;
-	z-index: 1;
-
-}
-
-.footer-mention {
-	cursor: pointer;
-	padding-left: 20px;
-	z-index: 1;
-
-}
-
-.footer-contact {
-	cursor: pointer;
-	padding-left: 50px;
-	z-index: 1;
-}
-
-.groupe1 {
-	display:flex;
-
-}
-
-.groupe2 {
-	display: flex;
-}
-
-} 
