--- a/css/stylemenu.css
+++ b/css/stylemenu.css
@@ -14,9 +14,9 @@ header a {
 }
 
 .icon-back {
-display: flex;
-color: #353535;
-z-index: 999;
+	display: flex;
+	color: #353535;
+	z-index: 999;
 }
 
 .bloc-logo {
@@ -28,7 +28,7 @@ z-index: 999;
 
 .size-img {
 	width: 100%;
-    max-width: 100%;
+	max-width: 100%;
 	max-height: 32rem;
 	object-fit: cover;
 }
@@ -41,14 +41,15 @@ z-index: 999;
 }
 
 .title {
-display: flex;
-justify-content: space-between;}
+	display: flex;
+	justify-content: space-between;
+}
 
 .header-container {
 	position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .menu {
@@ -72,150 +73,77 @@ justify-content: space-between;}
 	cursor: pointer;
 }
 
-/* LOADER */
+/* COEUR */
 
-.loader-container {
-	position: absolute;
-	width: 100vw;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	animation: hideLoader 2.5s forwards;
-  }
-
-  .loader-wrapper {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 4;
-  }
-  
-  .overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 1950px;
-	width: 110%;
-	bottom: 0;
-	background-color: rgba(233, 233, 233, 0.8);
-	animation: hideLoader 2.5s forwards;
-	z-index: 3;
-  }
-  
-  .dot {
-	top: 16%;
-	position: relative;
-	height: 50px;
-	width: 50px;
-	border-radius: 50%;
-	margin: 0 15px;
-	animation: loader infinite 0.3s alternate;
-	z-index: 3;
-  }
-  
-  .d1 {
-	background-color: #9356DC;
-  }
-  
-  .d2 {
-	background-color: #FF79DA;
-	animation-delay: 0.05s;
-  }
-  
-  .d3 {
-	background-color: #99E2D0;
-	animation-delay: 0.1s;
-  }
-  
-  @keyframes loader {
-	100% {
-	  transform: translateY(-30px);
-	}
-  }
-  
-  @keyframes hideLoader {
-	0%, 90% {
-	  opacity: 1;
-	  visibility: visible;
-	}
-	100% {
-	  opacity: 0;
-	  visibility: hidden;
-	}
-  }
-
-  /* COEUR */
-
-  .heart-btn:hover::after {
-    transform: scaleY(0);
+.heart-btn:hover::after {
+	transform: scaleY(0);
 }
+
 .heart-btn:hover .heart-btn__empty {
-    opacity: 0;
+	opacity: 0;
 }
+
 .heart-btn:hover .heart-btn__filled {
-    transform: scale(1);
+	transform: scale(1);
 }
+
 .heart-btn--accent {
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    bottom: 30px;
-    right: 24px;
+	cursor: pointer;
+	width: 24px;
+	height: 24px;
+	bottom: 30px;
+	right: 24px;
 }
 
 .heart-btn {
-    font-size: 1.5em;
-	}
+	font-size: 1.5em;
+}
 
 .heart-btn--accent {
-    width: 24px;
-    height: 24px;
-    bottom: 30px;
-    right: 24px;
+	width: 24px;
+	height: 24px;
+	bottom: 30px;
+	right: 24px;
 }
 
 .heart-btn--accent::after {
-    content: "";
-    position: absolute;
-    top: 35%;
-    bottom: 0;
-    left: 87%;
-    right: 0;
-    width: 24px;
-    height: 24px;
-    opacity: 1;
-    z-index: 1;
-    transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
-    transform-origin: top;
+	content: "";
+	position: absolute;
+	top: 35%;
+	bottom: 0;
+	left: 87%;
+	right: 0;
+	width: 24px;
+	height: 24px;
+	opacity: 1;
+	z-index: 1;
+	transition: transform 500ms cubic-bezier(0.55, 1.2, 0.93, 1);
+	transform-origin: top;
 	background-color: #F7F7F7;
 }
 
 .heart-btn__empty {
-    position: absolute;
-    top: 35%;
-    left: 87%;
-    font-weight: 100;
-    z-index: 2;
+	position: absolute;
+	top: 35%;
+	left: 87%;
+	font-weight: 100;
+	z-index: 2;
 }
+
 .heart-btn__filled {
-    position: absolute;
-    top: 35%;
-    left: 87%;
-    z-index: 0;
-    background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	position: absolute;
+	top: 35%;
+	left: 87%;
+	z-index: 0;
+	background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .upper {
-	font-family:'roboto';
+	font-family: 'roboto';
 	text-transform: uppercase;
-	font-weight:lighter;
+	font-weight: lighter;
 	margin-left: 13px;
 	border-bottom: 3px solid #99E2D0;
 	width: 40px;
@@ -225,25 +153,26 @@ justify-content: space-between;}
 /* ANIMATION MENU */
 
 .food-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 15px;
-    padding: 10px 20px;
-    margin-bottom: 15px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 15px;
+	padding: 10px 20px;
+	margin-bottom: 15px;
 	margin-left: 2%;
 	margin-right: 2%;
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    height: 69px;
-    opacity: 0;
-    transform: translateY(20px);
-    cursor: pointer;
-    animation: fadeInFromLeft 2s ease-out forwards;
+	background-color: #ffffff;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	height: 69px;
+	opacity: 0;
+	transform: translateY(20px);
+	cursor: pointer;
+	animation: fadeInFromLeft 2s ease-out forwards;
 	text-overflow: ellipsis;
-white-space: nowrap;
-overflow: hidden;
+	white-space: nowrap;
+	overflow: hidden;
+	transition: margin-left 0.5s ease-in-out;
 }
 
 .entr .food-item:nth-child(2) {
@@ -284,15 +213,16 @@ overflow: hidden;
 
 @keyframes fadeInFromLeft {
 	0% {
-	  opacity: 0;
-	  transform: translateX(-20px);
+		opacity: 0;
+		transform: translateX(-20px);
 	}
+
 	100% {
-	  opacity: 1;
-	  transform: none;
+		opacity: 1;
+		transform: none;
 	}
 }
-  
+
 .button {
 	position: relative;
 	font-family: 'roboto';
@@ -304,7 +234,7 @@ overflow: hidden;
 	color: white;
 	justify-content: center;
 	align-items: center;
-	margin-left: 31%; 
+	margin-left: 31%;
 }
 
 .button:hover {
@@ -314,22 +244,23 @@ overflow: hidden;
 
 
 .marge1 {
-font-weight: bold;
-font-size: large;
-text-overflow: ellipsis;
-white-space: nowrap;
-overflow: hidden;
+	font-weight: bold;
+	font-size: large;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .marge2 {
-text-overflow: ellipsis;
-white-space: nowrap;
-overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 
 }
 
 .size-item {
 	width: 85%;
+	overflow: hidden;
 }
 
 
@@ -339,7 +270,7 @@ overflow: hidden;
 	font-weight: 700;
 	position: relative;
 	z-index: 2;
-	transition: transform 0.5s cubic-bezier(.25,.46,.45,.94);
+	transition: all 0.5s cubic-bezier(.25, .46, .45, .94);
 	margin-top: 40px;
 }
 
@@ -353,7 +284,7 @@ overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	transition: width 0.5s cubic-bezier(.25,.46,.45,.94);
+	transition: width 0.5s cubic-bezier(.25, .46, .45, .94);
 	border-radius: 0px 15px 15px 0px;
 	color: transparent;
 }
@@ -367,13 +298,16 @@ overflow: hidden;
 	transform: translateX(-80px);
 }
 
-.check i {
-  z-index: 1;
+.food-item:hover .price {
+	margin-left: 80px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-  .fa-check-circle {
-
-  }
+.check i {
+	z-index: 1;
+}
 
 /* FOOTER */
 
@@ -408,130 +342,131 @@ footer a {
 
 @media (min-width: 768px) {
 
-.menu {
-	top: -40px;
-	justify-content: center;
-	align-items: center;
-	padding-bottom: 20px;
-	width: 70%;
-	margin-left: 15%;
-	border-radius: 25px 25px 0px 0px;
-}
+	.menu {
+		top: -40px;
+		justify-content: center;
+		align-items: center;
+		padding-bottom: 20px;
+		width: 70%;
+		margin-left: 15%;
+		border-radius: 25px 25px 0px 0px;
+	}
 
-.food-item {
-	margin-left: 2%;
-	margin-right: 2%;
-}
+	.food-item {
+		margin-left: 2%;
+		margin-right: 2%;
+	}
 
-.flex {
-display: flex;
-justify-content: center;
-}
+	.flex {
+		display: flex;
+		justify-content: center;
+	}
 
-.plats {
-	margin-bottom: 5%;
-}
+	.plats {
+		margin-bottom: 5%;
+	}
 
-.desserts {
-	margin-bottom: 5%;
-}
+	.desserts {
+		margin-bottom: 5%;
+	}
 
-.button {
-	width: 25%;
-	margin-left: 37%;
-	margin-bottom: 40px;
-	cursor: pointer;
-}
-
-
-
-/* COEUR RESPONSIVE */
-
-.heart-btn--accent::after {
-    top: 32%;
-    left: 95%;
-    
-}
-
-.heart-btn__empty {
-    position: absolute;
-    top: 32%;
-    left: 95%;
-    font-weight: 100;
-    z-index: 2;
-}
-.heart-btn__filled {
-    position: absolute;
-    top: 32%;
-    left: 95%;
-    z-index: 0;
-    background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+	.button {
+		width: 25%;
+		margin-left: 37%;
+		margin-bottom: 40px;
+		cursor: pointer;
+	}
 
 
-/* Footer */
 
-.reverse {
-	direction: rtl;
-}
+	/* COEUR RESPONSIVE */
 
-.flex-desktop {
-	display: flex;
-	direction: rtl;
-	height: 114px;
-}
+	.heart-btn--accent::after {
+		top: 32%;
+		left: 95%;
 
-.footer {
-	height: 114px;
-}
+	}
 
-.logo-footer {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 15px;
-	padding-right: 45px;
-	padding-left: 30px;
-}
+	.heart-btn__empty {
+		position: absolute;
+		top: 32%;
+		left: 95%;
+		font-weight: 100;
+		z-index: 2;
+	}
 
-.footer a {
-	cursor: pointer;
-}
+	.heart-btn__filled {
+		position: absolute;
+		top: 32%;
+		left: 95%;
+		z-index: 0;
+		background: linear-gradient(176deg, #9356DC 0%, #FF79DA 100%);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
 
-.footer-propose {
-	cursor: pointer;
-	padding-left: 20px;
-	z-index: 1;
 
-} 
+	/* Footer */
 
-.footer-devenir {
-	cursor: pointer;
-	z-index: 1;
+	.reverse {
+		direction: rtl;
+	}
 
-}
+	.flex-desktop {
+		display: flex;
+		direction: rtl;
+		height: 114px;
+	}
 
-.footer-mention {
-	cursor: pointer;
-	padding-left: 20px;
-	z-index: 1;
+	.footer {
+		height: 114px;
+	}
 
-}
+	.logo-footer {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 15px;
+		padding-right: 45px;
+		padding-left: 30px;
+	}
 
-.footer-contact {
-	cursor: pointer;
-	padding-left: 50px;
-	z-index: 1;
-}
+	.footer a {
+		cursor: pointer;
+	}
 
-.groupe1 {
-	display:flex;
-	justify-content: space-between;
-}
+	.footer-propose {
+		cursor: pointer;
+		padding-left: 20px;
+		z-index: 1;
 
-.groupe2 {
-	display: flex;
-}
+	}
+
+	.footer-devenir {
+		cursor: pointer;
+		z-index: 1;
+
+	}
+
+	.footer-mention {
+		cursor: pointer;
+		padding-left: 20px;
+		z-index: 1;
+
+	}
+
+	.footer-contact {
+		cursor: pointer;
+		padding-left: 50px;
+		z-index: 1;
+	}
+
+	.groupe1 {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.groupe2 {
+		display: flex;
+	}
 
 }
